async reload of table in main thread

--- a/CloudKitDictionarySyncer/Base.lproj/Main.storyboard
+++ b/CloudKitDictionarySyncer/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="myTableView" destination="ELJ-9s-eaH" id="Igf-ix-5mM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
